# autoresearch-prompt-manager

./: .env.example  .gitignore  .gitmodules  .mcp.json  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: autoresearch-pattern.md  banner.html  brainstorm.md  client-sdk-design-patterns.md  competitive-analysis.md  database-schema-research.md  design-agnosai.md  design-autoresearcher-shonku.md  design-integration-architecture.md  design-shonku.md  experiment-engine-research.md  implementation-plan.md  llm-provider-abstraction-research.md  research-autoresearch-optimization-loop.md  systems-thinking-analysis.md  validation-results.md
docs/wiki/: Getting-Started.md  Home.md  Vision.md  autoresearch-prompt-manager.md  autoresearcher-shonku.md  shonku.md
scripts/: dev_setup.sh
tests/integration/: test_e2e.py
