[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch-prompt-manager"
version = "0.1.0"
description = "Autonomous prompt management with A/B testing, metrics, and LLM-driven optimization"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["prompt-manager[api]"]
client = ["prompt-manager[client]"]
metric = ["prompt-manager[metric]"]
all = [
    "prompt-manager[all]",
    "shonku",
    "autoresearcher-shonku",
]
dev = [
    "prompt-manager[dev]",
    "shonku[dev]",
    "autoresearcher-shonku[dev]",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["packages/*/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
